Rewrap the location instructions

--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -13,13 +13,13 @@ limehouse_town_hall:
         15 from Trafalgar Sq / 115 from Aldgate /
         D6 from Hackney / D3 from Bethnal Green
 
-        Get onto Commercial Road and travel East from Aldgate or Whitechapel.
-        Stay on Commercial Road, passing Limehouse DLR on your right (and
-        going under a railway bridge) and you'll see a modern red brick church
-        also on the right, then a boarded up library. Just over the canal you'll
-        see the TownHall, with the Limehouse Hawksmoor church behind it. At this
-        point you should get off the bus/bicycle and come ring on the "Boxing Club"
-        bell (The top of the 4 main buttons).
+        Get onto Commercial Road and travel East from Aldgate or Whitechapel. Stay 
+        on Commercial Road, passing Limehouse DLR on your right (and going under a 
+        railway bridge) and you'll see a modern red brick church also on the right, 
+        then a boarded up library. Just over the canal you'll see the TownHall, with 
+        the Limehouse Hawksmoor church behind it. At this point you should get off 
+        the bus/bicycle and come ring on the "Boxing Club" bell (The top of the 4 
+        main buttons).
 
 stream_arts:
     where: 
