--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -36,6 +36,8 @@ dorkbike_2015:
         Greenwich foot tunnel at 11am, contact me on 07742 711 026 if you need
         directions - Dave Green)
 
+        <img src="images/junkyard-map.png"/>
+
 stream_arts:
     where: 
         Stream Arts, Rothbury Hall, London, SE10 0EF
