--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -112,3 +112,24 @@ mat_lab:
         The Queen's Building there's a glass storefront with orange benches
         and people milling about looking studious. That's the entrance. There
         should be a 'dorkbot' sign there.
+
+lake_district:
+    where:
+        Lake District
+
+va_lt:
+    where:
+        V &amp; A Lecture Theatre
+
+ccc:
+    where:
+        Centre for Creative Collaboration
+
+westminster_pier:
+    where:
+        Westminster Pier
+
+great_western_studios:
+    where:
+        Great Western Studios
+
