import the "60s" pages into the archive

--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -133,3 +133,7 @@ great_western_studios:
     where:
         Great Western Studios
 
+rca_cafe:
+    where:
+        Royal College of Arts (Cafe)
+
