import the "50s" pages into the archive

--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -137,3 +137,19 @@ rca_cafe:
     where:
         Royal College of Arts (Cafe)
 
+streamside:
+    where:
+        streamside
+
+dorking:
+    where:
+        Bentley Copse, Dorking
+
+area10:
+    where:
+        area10
+
+01zero-one:
+    where:
+        01zero-one
+
