--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -157,3 +157,10 @@ state51:
     where:
         state51
 
+richmix:
+    where:
+        richmix
+
+space_studios:
+    where:
+        Space Studios
