--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -23,6 +23,7 @@ limehouse_town_hall:
         it, on the opposite side of the road from the big metal anchor. At
         this point you should get off the bus/bicycle and come ring on the
         "Boxing Club" bell (The top of the 4 main buttons).
+        <a data-flickr-embed="true"  href="https://www.flickr.com/photos/loopzilla/2293345433/" title="Limehouse Town Hall"><img src="https://farm3.staticflickr.com/2095/2293345433_b53e981115_n.jpg" width="320" height="240" alt="Limehouse Town Hall"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
 dorkbike_2015:
     where:
