--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -28,6 +28,11 @@ limehouse_town_hall:
 rca_FB03:
     where:
         The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, see map?)
+    where_html: |
+
+    directions: |
+
+
 
 dorkbike_2015:
     where:
