--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -29,7 +29,7 @@ rca_FB03:
     where:
         The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, see map?)
     where_html: |
-
+        The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, see map?)
     directions: |
 
 
