--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -25,13 +25,13 @@ limehouse_town_hall:
         "Boxing Club" bell (The top of the 4 main buttons).
         <a data-flickr-embed="true"  href="https://www.flickr.com/photos/loopzilla/2293345433/" title="Limehouse Town Hall"><img src="https://farm3.staticflickr.com/2095/2293345433_b53e981115.jpg" width="500" height="375" alt="Limehouse Town Hall"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
-rca_FB03:
+rca_fb03:
     where:
         The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, see map?)
     where_html: |
         The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, see map?)
     directions: |
-
+        The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, see map?)
 
 
 dorkbike_2015:
