--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -33,6 +33,7 @@ rca_fb03:
         The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
     directions: |
         The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        <img src="https://www.rca.ac.uk/media/images/Kensington.2015_1.focus-none.width-750.jpg">
 
 
 dorkbike_2015:
