--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -28,11 +28,11 @@ limehouse_town_hall:
 
 rca_fb03:
     where:
-        The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre)
+        The Royal College of Art, Kensington SW7 2EU, Darwin Building, room FB03 (Basement Lecture Theatre)
     where_html: |
-        The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        The Royal College of Art, Kensington SW7 2EU, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
     directions: |
-        The Royal College of Art, Kensington campus, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        The Royal College of Art, Kensington SW7 2EU, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
         <img src="https://www.rca.ac.uk/media/images/Kensington.2015_1.focus-none.width-750.jpg">
 
 
