--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -30,9 +30,11 @@ rca_fb03:
     where:
         The Royal College of Art, Kensington SW7 2EU, Darwin Building, room FB03 (Basement Lecture Theatre)
     where_html: |
-        The Royal College of Art, Kensington SW7 2EU, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        Room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        The Royal College of Art, Kensington SW7 2EU, Darwin Building - Jay Mews entrance
     directions: |
-        The Royal College of Art, Kensington SW7 2EU, Darwin Building, room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        Room FB03 (Basement Lecture Theatre, <a href="https://www.rca.ac.uk/contact-us/maps-visiting/">see map</a>)
+        The Royal College of Art, Kensington SW7 2EU, Darwin Building - Jay Mews entrance
         <img src="https://www.rca.ac.uk/media/images/Kensington.2015_1.focus-none.width-750.jpg">
 
 
