--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -6,6 +6,9 @@ limehouse_town_hall:
     directions: |
         <b>==== How to get to Limehouse Town Hall: ====</b>
 
+        NB: Unfortunately Limehouse Town Hall is not wheelchair accessible
+        - there are steps from the street and up to the main hall.
+
         <b>== By Tube:</b>
         Limehouse DLR from Bank or Tower Gateway
 
@@ -13,8 +16,8 @@ limehouse_town_hall:
         15 from Trafalgar Sq / 115 from Aldgate /
         D6 from Hackney / D3 from Bethnal Green
 
-        NB Google's location for this postcode is a bit off, it's actually where
-        Commercial Road crosses the Limehouse Cut canal, or in other words...
+        Google's location for this postcode is a bit off, it's actually 
+        opposite where Salmon Lane joins Commercial Road, or in other words...
         Get onto Commercial Road and travel East from Aldgate or Whitechapel.
         Stay on Commercial Road, passing Limehouse DLR on your right (and
         going under a railway bridge) and you'll see a modern red brick church
