--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -16,7 +16,7 @@ limehouse_town_hall:
         15 from Trafalgar Sq / 115 from Aldgate /
         D6 from Hackney / D3 from Bethnal Green
 
-        Google's location for this postcode is a bit off, it's actually 
+        Beware! Google's location for E14 7HA is a bit off, it's actually 
         opposite where Salmon Lane joins Commercial Road, or in other words...
         Get onto Commercial Road and travel East from Aldgate or Whitechapel.
         Stay on Commercial Road, passing Limehouse DLR on your right (and
