Dorkbot 95, and some tweaks.

--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -6,26 +6,27 @@ limehouse_town_hall:
     directions: |
         <b>==== How to get to Limehouse Town Hall: ====</b>
 
-        NB: Unfortunately Limehouse Town Hall is not wheelchair accessible
-        - there are steps from the street and up to the main hall.
+        NB: Unfortunately Limehouse Town Hall is not wheelchair accessible as
+            there are steps from the street and up to the main hall.
 
-        <b>== By Tube:</b>
+        == By Tube: ==
         Limehouse DLR from Bank or Tower Gateway
 
-        <b>== By Bus:</b>
+        == By Bus: ==
         15 from Trafalgar Sq / 115 from Aldgate /
         D6 from Hackney / D3 from Bethnal Green
 
-        Beware! Google's location for E14 7HA is a bit off, it's actually 
+        Beware! Google's location for E14 7HA is a bit off, it's actually
         opposite where Salmon Lane joins Commercial Road, or in other words...
         Get onto Commercial Road and travel East from Aldgate or Whitechapel.
-        Stay on Commercial Road, passing Limehouse DLR on your right (and
-        going under a railway bridge) and you'll see a modern red brick church
-        also on the right, then a boarded up library. Just over the canal
-        you'll see the Town Hall, with the Limehouse Hawksmoor church behind
-        it, on the opposite side of the road from the big metal anchor. At
-        this point you should get off the bus/bicycle and come ring on the
-        "Boxing Club" bell (The top of the 4 main buttons).
+        Stay on Commercial Road, passing Limehouse DLR on your right (and going
+        under a railway bridge) and you'll see a modern red brick church also
+        on the right, then a boarded up library. Just over the canal you'll see
+        the Town Hall, with the Limehouse Hawksmoor church behind it, on the
+        opposite side of the road from the big metal anchor. At this point you
+        should get off the bus/bicycle and come ring on the "Boxing Club" bell
+        (The top of the 4 main buttons).
+
         <a data-flickr-embed="true"  href="https://www.flickr.com/photos/loopzilla/2293345433/" title="Limehouse Town Hall"><img src="https://farm3.staticflickr.com/2095/2293345433_b53e981115.jpg" width="500" height="375" alt="Limehouse Town Hall"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
 
